apps/wolweb/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service

spec:
  ports:
    - port: 8089
      targetPort: 8089
  selector:
    app: default
