apps/wolweb/resources/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: route

spec:
  routes:
    - kind: Rule
      match: Host(`apps.starry.blue`) && PathPrefix(`/wolweb`)
      services:
        - name: service
          port: 8089
